--- a/BackendDeployAksPipeline.yaml
+++ b/BackendDeployAksPipeline.yaml
@@ -1,40 +1,48 @@
-  trigger:
-    branches:
-      include:
-        - main
+trigger: none
 
-  variables:
-    resourceGroup: 'my-rg'
-    aksCluster: 'aks-cluster-vent1'
-    acrName: 'mysharedacr1234'
-    chartName: 'myapp'
-    chartVersion: '0.1.0'
-    releaseName: 'myapp-release'
-    namespace: 'default'
-    bicepFile: 'BackendHelm.bicep'
+variables:
+  azureSubscription: 'prashanthscn'  # Name of your Azure DevOps service connection
+  resourceGroup: 'my-rg'
+  aksCluster: 'aks-cluster-vnet1'
+  helmReleaseName: 'my-app'
+  chartPath: './captest' # Path to your local Helm chart
+  chartVersion: '1.0.0'
 
-  pool:
-    name: Default
+stages:
+- stage: DeployHelmChart
+  displayName: Deploy Helm chart to AKS
+  jobs:
+  - job: HelmDeploy
+    displayName: Deploy via Helm
+    pool:
+      name: Default
 
-  steps:
-  - checkout: self
+    steps:
+    - task: AzureCLI@2
+      name: AKSLogin
+      inputs:
+        azureSubscription: $(azureSubscription)
+        scriptType: bash
+        scriptLocation: inlineScript
+        inlineScript: |
+          echo "Getting AKS credentials..."
+          az aks get-credentials --resource-group $(resourceGroup) --name $(aksCluster) --overwrite-existing
 
-  - task: AzureCLI@2
-    inputs:
-      azureSubscription: 'prashanthscn'  # Must be a valid service connection name
-      scriptType: 'bash'
-      scriptLocation: 'inlineScript'
-      inlineScript: |
-        az bicep install
-        az deployment group create \
-          --resource-group $(resourceGroup) \
-          --template-file $(bicepFile) \
-          --parameters \
-            aksClusterName=$(aksCluster) \
-            aksResourceGroup=$(resourceGroup) \
-            acrName=$(acrName) \
-            chartName=$(chartName) \
-            chartVersion=$(chartVersion) \
-            releaseName=$(releaseName) \
-            namespace=$(namespace)
+    - task: HelmInstaller@1
+      inputs:
+        helmVersionToInstall: 'latest'
 
+    - script: |
+        echo "Packaging Helm chart..."
+        helm lint $(chartPath)
+        helm package $(chartPath) --version $(chartVersion) --destination .
+      displayName: Helm Lint & Package
+
+    - script: |
+        echo "Creating namespace if not exists..."
+        kubectl get namespace $(namespace) || kubectl create namespace $(namespace)
+
+        echo "Installing/Upgrading Helm release..."
+        helm upgrade --install $(helmReleaseName) ./$(helmReleaseName)-$(chartVersion).tgz \
+          --namespace $(namespace) --create-namespace
+      displayName: Helm Upgrade Install
