--- a/BackendDeployAksPipeline.yaml
+++ b/BackendDeployAksPipeline.yaml
@@ -87,6 +87,27 @@ stages:
         inlineScript: |
           echo "Getting AKS credentials..."
           az aks get-credentials --resource-group $(resourceGroup) --name $(aksCluster2) --overwrite-existing
+    - task: Kubernetes@1
+      displayName: Apply Postgres Init ConfigMap
+      inputs:
+        connectionType: Azure Resource Manager
+        azureSubscriptionEndpoint: $(azureSubscription)
+        azureResourceGroup: $(resourceGroup)
+        kubernetesCluster: $(aksCluster1)
+        command: apply
+        useConfigurationFile: true
+        configuration: BackendKubeManifest/postgres-init-configmap.yaml
+
+    - task: Kubernetes@1
+      displayName: Apply Postgres Init Job
+      inputs:
+        connectionType: Azure Resource Manager
+        azureSubscriptionEndpoint: $(azureSubscription)
+        azureResourceGroup: $(resourceGroup)
+        kubernetesCluster: $(aksCluster1)
+        command: apply
+        useConfigurationFile: true
+        configuration: BackendKubeManifest/postgres-init-job.yaml
 
     - task: HelmInstaller@1
       inputs:
