--- a/frontenDeployAkspipeline.yml
+++ b/frontenDeployAkspipeline.yml
@@ -8,11 +8,11 @@ variables:
 
   # Container registry service connection established during pipeline creation
   #dockerRegistryServiceConnection: 'a736290b-0658-4b67-a305-64f2a02bdcb0'
-  dockerRegistryServiceConnection: 'cbc19279-833f-470d-9afd-24e5db877e3c'
-  imageRepository: 'frontendangularimg'
+  dockerRegistryServiceConnection: '702fbc9a-0f37-4b61-aea4-ac4e3d3d8764'
+  imageRepository: 'frontendfinalimage'
   containerRegistry: 'mysharedacr1234.azurecr.io'
   tag: '1.0.3'
-  imagePullSecret: 'mysharedacr12347712769a-auth'
+  imagePullSecret: 'mysharedacr12341125eda9-auth'
 
   # Agent VM image name
 
