--- a/frontenDeployAkspipeline.yml
+++ b/frontenDeployAkspipeline.yml
@@ -30,13 +30,20 @@ stages:
       runOnce:
         deploy:
           steps:
-          - checkout: self
+          # - checkout: self
           # - task: KubernetesManifest@0
           #   displayName: Create imagePullSecret
           #   inputs:
           #     action: createSecret
           #     secretName: $(imagePullSecret)
           #     dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
+          - script: |
+              echo "Current context:"
+              kubectl config current-context
+              kubectl config get-contexts
+            env:
+              KUBECONFIG: $(System.DefaultWorkingDirectory)/home/Prashanth/.kube/config
+
           - task: KubernetesManifest@0
             displayName: Deploy to Kubernetes cluster
             inputs:
