--- a/frontenDeployAkspipeline.yml
+++ b/frontenDeployAkspipeline.yml
@@ -42,7 +42,7 @@ stages:
               kubectl config current-context
               kubectl config get-contexts
             env:
-              KUBECONFIG: $(System.DefaultWorkingDirectory)/home/Prashanth/.kube/config
+              KUBECONFIG: /home/Prashanth/.kube/config
 
           - task: KubernetesManifest@0
             displayName: Deploy to Kubernetes cluster
