Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -22,11 +22,11 @@ variables:
 
 
 stages:
-- stage: Build
-  displayName: Build stage
+- stage: DeployOnAks1
+  displayName: DeployOnAks1
   jobs:
-  - deployment: Deploy
-    displayName: Deploy
+  - deployment: DeployOnAks1
+    displayName: DeployOnAks1
     pool:
       name: Default
     environment: 'CapStoneProjectAzure-3330.default'
@@ -52,4 +52,36 @@ stages:
                 $(imagePullSecret)
               containers: |
                 $(containerRegistry)/$(imageRepository):$(tag)
+
+- stage: DeployOnaks2
+  displayName: Deploy stage
+  jobs:
+  - deployment: Deploy
+    displayName: Deploy
+    pool:
+      name: Default
+    environment: 'CapStoneProjectAzure-1680.default'
+    strategy:
+      runOnce:
+        deploy:
+          steps:
+          - task: KubernetesManifest@0
+            displayName: Create imagePullSecret
+            inputs:
+              action: createSecret
+              secretName: $(imagePullSecret)
+              dockerRegistryEndpoint: $(dockerRegistryServiceConnection)
+
+          - task: KubernetesManifest@0
+            displayName: Deploy to Kubernetes cluster
+            inputs:
+              action: deploy
+              manifests: |
+                $(Build.SourcesDirectory)/Frontend-Manifests/deployment.yml
+                $(Build.SourcesDirectory)/Frontend-Manifests/service.yml
+              imagePullSecrets: |
+                $(imagePullSecret)
+              containers: |
+                $(containerRegistry)/$(imageRepository):$(tag)
+
 
