--- a/Backend/authentication-service/authentication-service.yaml
+++ b/Backend/authentication-service/authentication-service.yaml
@@ -94,3 +94,46 @@ stages:
         containerRegistry: '$(dockerRegistryServiceConnection)'
         tags: |
           $(tag)
+          
+- stage: SecurityScan
+  displayName: Trivy Vulnerability Scan
+  dependsOn: Build         
+  condition: succeeded()
+
+  jobs:
+  - job: TrivyScan
+    displayName: Scan Docker image with Trivy
+    pool:
+      name: Default         
+    steps:
+    # 1. Install Trivy (single-line install script)
+    - bash: |
+        set -e
+        echo "Installing Trivy CLI…"
+        curl -sfL https://raw.githubusercontent.com/aquasecurity/trivy/main/contrib/install.sh | sh -
+      displayName: "Install Trivy"
+
+    2. Log in to ACR so Trivy can pull the image layers
+    - task: AzureCLI@2
+      displayName: "az acr login"
+      inputs:
+        azureSubscription: '$(azureServiceConnection)'
+        scriptType: bash
+        scriptLocation: inlineScript
+        inlineScript: |
+          # extract ACR name from the fully-qualified registry URL
+          ACR_NAME="$(echo $(containerRegistry) | cut -d'.' -f1)"
+          az acr login --name "$ACR_NAME"
+
+    3. Run the vulnerability scan
+    - bash: |
+        set -e
+        IMAGE="$(containerRegistry)/$(imageRepository):$(tag)"
+        echo "Scanning $IMAGE …"
+        trivy image \
+          --cache-dir $(Pipeline.Workspace)/trivy-cache \
+          --severity HIGH,CRITICAL \          
+          --exit-code 1 \                     
+          --format sarif --output trivy-report.sarif \
+          "$IMAGE"
+      displayName: "Trivy image scan"
