--- a/Backend/authentication-service/authentication-service.yaml
+++ b/Backend/authentication-service/authentication-service.yaml
@@ -1,7 +1,8 @@
 trigger: none
 variables:
   dockerRegistryServiceConnection: '33380ad7-f270-4c23-a0ba-269ed94a5ce5'
-  sonarQubeServiceConnection: 'sonar'  # Change this to your actual service connection name
+  sonarQubeServiceConnection: 'sonar'
+  azureServiceConnection: 'prashanthscn'
   imageRepository: 'authentication-service'
   containerRegistry: 'mysharedacr1234.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Backend/authentication-service/Dockerfile'
